--- a/mobile app/pubspec.yaml
+++ b/mobile app/pubspec.yaml
@@ -22,17 +22,16 @@ environment:
 
 dependencies:
   easy_rich_text: '^0.5.2'
-  direct_select: "^1.0.0"
-  charts_flutter: ^0.8.1
   syncfusion_flutter_charts: ^18.3.40
   searchable_dropdown: ^1.1.3
-  http: ^0.12.2
-  flutter_form_builder: ^3.14.0-alpha.1
+  http: ^0.11.3+16
   intl: ">=0.14.0"
   smart_select: ^4.3.2
   cupertino_radio_choice: ^1.0.0+2
   shared_preferences: ^0.5.12
   path_provider: ^1.6.24
+  http_middleware: ^1.0.0
+  http_logger: ^1.0.0
   flutter:
     sdk: flutter
 
